compiler/testData/diagnostics/tests/callableReference/kt7430_wrongClassOnLHS.fir.kt
// !DIAGNOSTICS: -UNUSED_EXPRESSION

class Unrelated()

class Test(val name: String = "") {
    init {
        <!UNRESOLVED_REFERENCE!>Unrelated::name<!>
        <!UNRESOLVED_REFERENCE!>Unrelated::foo<!>
    }

    fun foo() {}
}
